fix switch z-index

--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -17,7 +17,7 @@
   pointer-events: initial;
 
   //*for body no-scroll *
-  z-index: 1;
+  z-index: 2;
   //*
 }
 
